# sentry

./: .gitignore  README.md  buildit  launch_msosa_from_project_dir.cmd  parametric_sweep_trace_metrics.csv  run_sentry_bridge_windows.cmd  sentry_parametric_sweep.csv  simulation-log4j2-fixed.xml
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py  schemas.py
apps/api/app/routes/: __init__.py  health.py  mission.py  replays.py  route_plan.py  simulation.py  spa.py
apps/api/app/services/: __init__.py  geometry.py  mission_control.py  mission_mode.py  mission_projection.py  mission_projection_routes.py  mission_routes.py  playback_logging.py  reference_scene.py  rendering.py  replay_sessions.py  trajectory_motion.py
apps/api/scripts/: run_dev_server.sh  run_integrated_server.sh
apps/api/tests/: test_mission_projection.py  test_mission_service.py
apps/cameo-plugin/: pom.xml
apps/cameo-plugin/scripts/: build_plugin_dist.sh  deploy_to_windows_plugins.sh
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/web/scripts/: run_dev_server.sh  sync_cesium_assets.mjs
apps/web/src/: App.css  App.tsx  main.tsx  types.ts
apps/web/src/api/: client.ts
apps/web/src/viewport/: cesiumWorkspace.ts  playbackBuffer.ts  playbackOrientation.ts  sceneMath.ts
example/: Model - Lecture 9 - Practice Question 8.mdzip
release/: run_sentry_bridge_linux.sh
release/plugins/sentry-cameo-bridge/: plugin.xml
release/web/: index.html
release/web/assets/: index-C1_ZUXhu.css
(+23 files in other folders)
